tests/neg-macros/annot-crash.check

-- Error: tests/neg-macros/annot-crash/Test_2.scala:1:0 ----------------------------------------------------------------
1 |@crash // error
  |^^^^^^
  |Failed to evaluate macro.
  |  Caused by class scala.NotImplementedError: an implementation is missing
  |    scala.Predef$.$qmark$qmark$qmark(Predef.scala:344)
  |    crash.transform(Macro_1.scala:7)
